--- a/woocommerce-gateway-afterpay/css/afterpay.css
+++ b/woocommerce-gateway-afterpay/css/afterpay.css
@@ -1,4 +1,9 @@
 /* What is Afterpay modal */
+#payment .payment_methods li .payment_box.payment_method_afterpay {
+	padding-left: 5px;
+	padding-right: 5px;
+}
+
 #afterpay-what-is-modal  img.afterpay-modal-image {
     display: block;
 }
@@ -13,13 +18,6 @@
     #afterpay-what-is-modal  img.afterpay-modal-image{
         display: none;
     }
-}
-
-.woocommerce #payment .payment_method_afterpay li {
-	float:inherit;
-}
-.woocommerce #payment .payment_method_afterpay li img {
-	float:inherit;
 }
 
 /* Afterpay info in checkout */
@@ -45,11 +43,12 @@
 .woocommerce #payment .payment_method_afterpay .form-list {
     padding-left: 0;
     margin-left: 0;
+    text-align: center;
 }
 
 .woocommerce #payment .payment_method_afterpay .form-alt {
     display: inline-block; /* shrink-wrap the form, to make the footer align nicely */
-    width: 100%;
+    max-width: 100%;
     padding: 0px 0px 0px 0px !important;
 }
 
@@ -76,17 +75,16 @@
 
 .woocommerce #payment .payment_method_afterpay .instalments {
     margin-bottom: 30px;
-    margin-left: -10px;
     position: relative;
 }
 
 .woocommerce #payment .payment_method_afterpay .instalments .header-text {
     font-family: Arial, sans-serif;
-    font-weight: 600;
-    font-size: 9px;
-    color: #A1A4A6;
+    /*font-weight: 600;*/
+    /*font-size: 9px;*/
+    color: #379dd6;
     margin: 10px 0;
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     line-height: 20px;
 }
 
@@ -164,8 +162,8 @@
     }
 
     .woocommerce #payment .payment_method_afterpay .instalments .header-text {
-        font-size: 12px;
-	text-align: center;
+        font-size: 14px;
+        text-align: center;
     }
 
     .woocommerce #payment .payment_method_afterpay .instalments .cost {
